--- a/templates/index.html
+++ b/templates/index.html
@@ -17,79 +17,82 @@
   <body>
     <h1>ACNH Fish Spawning Calendar</h1>
     {% if image_url %}
-    <h2>Spawning Calendar</h2>
-    <div class="image_container">
-      <div class="hemisphere_selection">
-        <!-- https://www.svgrepo.com/svg/310651/circle-half-fill -->
-        <form action="/" method="post" id="form1" style="display: inline">
-          <button
-            type="submit"
-            name="hemisphere"
-            value="NH"
-            class="button_container"
-            id="btn1"
-            onclick="setFormState('form2', 'static/images/SH_spawning_calendar.png')"
-          >
-          <svg
-            viewBox="0 0 24 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-            width="64"
-            height="64"
-          >
-            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-            <g
-              id="SVGRepo_tracerCarrier"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            ></g>
-            <g id="SVGRepo_iconCarrier">
-              <path
-                d="M2.0277 11.25C2.41123 6.07745 6.72944 2 12 2C17.2706 2 21.5888 6.07745 21.9723 11.25H22V12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12V11.25H2.0277ZM4.03469 11.25H19.9653C19.5872 7.18341 16.1654 4 12 4C7.83463 4 4.41279 7.18341 4.03469 11.25Z"
-                fill="#212121"
-              ></path>
-            </g>
-          </svg>
-        </button>
-        </form>
-        <form action="/" method="post" id="form2" style="display: none">
-          <button
-            type="submit"
-            name="hemisphere"
-            value="SH"
-            class="button_container"
-            id="btn2"
-            onclick="setFormState('form1', 'static/images/NH_spawning_calendar.png')"
-          >
-            <svg
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-              transform="rotate(180)"
-              width="64"
-              height="64"
+    <h2>All Fish Spawning Calendar</h2>
+    <div class="image_container_outer">
+      <div class="image_container_inner">
+        <div class="hemisphere_selection">
+          <!-- https://www.svgrepo.com/svg/310651/circle-half-fill -->
+          <form action="/" method="post" id="form1" style="display: inline">
+            <button
+              type="submit"
+              name="hemisphere"
+              value="NH"
+              class="svg_button_container"
+              id="btn1"
+              onclick="setFormState('form2', 'static/images/SH_spawning_calendar.png')"
             >
-              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-              <g
-                id="SVGRepo_tracerCarrier"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></g>
-              <g id="SVGRepo_iconCarrier">
-                <path
-                  d="M2.0277 11.25C2.41123 6.07745 6.72944 2 12 2C17.2706 2 21.5888 6.07745 21.9723 11.25H22V12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12V11.25H2.0277ZM4.03469 11.25H19.9653C19.5872 7.18341 16.1654 4 12 4C7.83463 4 4.41279 7.18341 4.03469 11.25Z"
-                  fill="#212121"
-                ></path>
-              </g>
-            </svg>
-          </button>
-        </form>
+              <svg
+                width="64px"
+                height="64px"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                transform="rotate(0)"
+              >
+                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                <g
+                  id="SVGRepo_tracerCarrier"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></g>
+                <g id="SVGRepo_iconCarrier">
+                  <path
+                    d="M2.0277 11.25C2.41123 6.07745 6.72944 2 12 2C17.2706 2 21.5888 6.07745 21.9723 11.25H22V12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12V11.25H2.0277ZM12 3.5C7.55831 3.5 3.91233 6.90686 3.53263 11.25H20.4674C20.0877 6.90686 16.4417 3.5 12 3.5Z"
+                    fill="#212121"
+                  ></path>
+                </g>
+              </svg>
+            </button>
+          </form>
+          <form action="/" method="post" id="form2" style="display: none">
+            <button
+              type="submit"
+              name="hemisphere"
+              value="SH"
+              class="svg_button_container"
+              id="btn2"
+              onclick="setFormState('form1', 'static/images/NH_spawning_calendar.png')"
+            >
+              <svg
+                width="64px"
+                height="64px"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                transform="rotate(180)"
+              >
+                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                <g
+                  id="SVGRepo_tracerCarrier"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></g>
+                <g id="SVGRepo_iconCarrier">
+                  <path
+                    d="M2.0277 11.25C2.41123 6.07745 6.72944 2 12 2C17.2706 2 21.5888 6.07745 21.9723 11.25H22V12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12V11.25H2.0277ZM12 3.5C7.55831 3.5 3.91233 6.90686 3.53263 11.25H20.4674C20.0877 6.90686 16.4417 3.5 12 3.5Z"
+                    fill="#212121"
+                  ></path>
+                </g>
+              </svg>
+            </button>
+          </form>
+        </div>
+        <img
+          id="image"
+          src="{{ url_for('static', filename='images/' + image_url.split('/')[-1]) }}"
+          alt="Spawning Calendar"
+        />
       </div>
-      <img
-        id="image"
-        src="{{ url_for('static', filename='images/' + image_url.split('/')[-1]) }}"
-        alt="Spawning Calendar"
-      />
     </div>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
@@ -109,17 +112,47 @@
       }
     </script>
     {% endif %}
-    <h2>List of Uncaught Fish:</h2>
-    <ul>
-      {% for fish in uncaught_fish_list %}
-      <li>{{ fish }}</li>
-      {% endfor %}
-    </ul>
-    <h2>List of All Fish:</h2>
-    <ul>
+
+    <div style="display: flex; align-items: center; justify-content: center;">
+      <h2 style="margin-right: 15px;">List of All Fish:</h2>
+      <button onclick="toggleFishList('fishListContainer', 'all_fish_btn')" id="all_fish_btn" class="button_container">Show All Fish</button>
+    </div>
+    <div id="fishListContainer" style="display: none">
+      <div style="display: flex; flex-wrap: wrap">
       {% for fish in fish_list %}
-      <li>{{ fish }}</li>
+      <div style="flex: 1 0 25%; box-sizing: border-box; padding: 5px">
+        {{ fish }}
+      </div>
       {% endfor %}
-    </ul>
+      </div>
+    </div>
+
+    <div style="display: flex; align-items: center; justify-content: center;">
+      <h2 style="margin-right: 15px;">List of Uncaught Fish:</h2>
+      <button onclick="toggleFishList('uncaughtFishListContainer', 'uncaught_fish_btn')" id="uncaught_fish_btn" class="button_container">Show Uncaught Fish</button>
+    </div>
+    <div id="uncaughtFishListContainer" style="display: none">
+      <div style="display: flex; flex-wrap: wrap">
+      {% for fish in uncaught_fish %}
+      <div style="flex: 1 0 25%; box-sizing: border-box; padding: 5px">
+        {{ fish }}
+      </div>
+      {% endfor %}
+      </div>
+    </div>
+    
+    <script>
+      function toggleFishList(containerId, buttonId) {
+      var button = document.getElementById(buttonId);
+      var container = document.getElementById(containerId);
+      if (container.style.display === "none") {
+        container.style.display = "block";
+        button.textContent = "Hide " + button.textContent.split(' ')[1] + " Fish";
+      } else {
+        container.style.display = "none";
+        button.textContent = "Show " + button.textContent.split(' ')[1] + " Fish";
+      }
+      }
+    </script>
   </body>
 </html>
