--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,6 +8,30 @@
     src: url("../fonts/Bokutoh_M.otf");
 }
 
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+.topnav a {
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+}
+
 body {
     font-family: Bokutoh_EB;
     background-color: #f0f0f0;
