--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -25,6 +25,8 @@
 .topnav a:hover {
     background-color: #ddd;
     color: black;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    transform: scale(0.9);
 }
 
 .topnav a.active {
@@ -120,8 +122,8 @@ img {
 
 .button_container:hover {
     background-color: #23c483;
-    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
     color: #fff;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
     transform: translateY(-7px);
 }
 
