--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -33,9 +33,11 @@
     0%, 20%, 50%, 80%, 100% {
         transform: translateX(0);
     }
+
     40% {
         transform: translateX(-23px);
     }
+
     60% {
         transform: translateX(-13px);
     }
@@ -62,6 +64,10 @@ h1 {
 }
 
 h2 {
+    padding: 20px;
+}
+
+h3 {
     padding: 20px;
 }
 
@@ -158,4 +164,51 @@ img {
     width: 80px;
     margin-left: 0;
     margin-right: auto;
+}
+
+.fish_list_container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2px;
+    justify-content: left;
+    /* Center the grid items */
+}
+
+.fish_list {
+    flex: 0 1 15%;
+    box-sizing: border-box;
+    padding: 10px;
+    margin: 5px;
+    border: 1px solid #ddd;
+    /* Add border to grid items */
+    text-align: center;
+}
+
+.fish_list_count {
+    text-align: right;
+}
+
+.fish_list_count_color {
+    color: hsl(calc(120 - (120 * var(--fish-count, 0) / 80)), 100%, 50%);
+}
+
+@media (max-width: 1200px) {
+    .fish_list {
+        flex: 0 1 28%;
+        /* Adjust for medium screens */
+    }
+}
+
+@media (max-width: 768px) {
+    .fish_list {
+        flex: 0 1 45%;
+        /* Adjust for small screens */
+    }
+}
+
+@media (max-width: 480px) {
+    .fish_list {
+        flex: 0 1 100%;
+        /* Adjust for extra small screens */
+    }
 }
