--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -59,13 +59,13 @@ h1 {
     padding: 20px;
     font-family: Bokutoh_EB;
     margin-top: 10px;
-    margin-bottom: 10px;
     color: #333;
     text-align: center;
 }
 
 h2 {
-    padding: 20px;
+    padding: 10px;
+    margin-right: 15px
 }
 
 h3 {
@@ -156,16 +156,50 @@ img {
 
 .svg_button_container {
     border: 0px;
-    margin-left: 5px;
-    margin-right: auto;
     background-color: transparent;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.hemisphere_selection {
-    width: 80px;
-    margin-left: 0;
-    margin-right: auto;
+svg {
+    display: block;
+    margin: auto;
 }
+
+.svg_button_container svg {
+    width: 80%;
+    height: 80%;
+    transform-origin: center;
+}
+
+.hemisphere_selection_outer {
+    background-color: red;
+    display: flex;
+    align-items: center;
+}
+
+.hemisphere_selection_btns {
+    margin: 0;
+    padding: 0;
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 64px;
+    height: 64px;
+    overflow: hidden;
+    text-align: center;
+}
+
+.hemisphere_selection_text {
+    background-color: gold;
+    display: inline-block;
+    margin-left: 10px;
+}
+
 
 .fish_list_container {
     display: flex;
@@ -178,19 +212,29 @@ img {
 .fish_list {
     flex: 0 1 15%;
     box-sizing: border-box;
-    padding: 10px;
-    margin: 5px;
+    padding: 15px;
     border: 1px solid #ddd;
-    /* Add border to grid items */
     text-align: center;
+    width: auto;
+    height: auto;
+    margin: 5px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .fish_list_count {
     text-align: right;
+    padding-right: 10%;
 }
 
 .fish_list_count_color {
     color: hsl(calc(120 - (120 * var(--fish-count, 0) / 80)), 100%, 50%);
+}
+
+.fishContainerHeading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media (max-width: 1200px) {
