--- a/templates/fish-input.html
+++ b/templates/fish-input.html
@@ -54,77 +54,9 @@
       Did you mean...
       <ul id="suggestions-list"></ul>
     </div>
-
+    <script src="{{ url_for('static', filename='js/saveAndSendData.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/displaySuggestions.js')}}"></script>
     <script>
-      function saveAndSendData() {
-        let newData = document.getElementById("fishData").value;
-        let existingData = localStorage.getItem("userInput");
-        let data;
-
-        if (existingData) {
-          let existingDataArray = existingData.split("\n");
-          let newDataArray = newData.split("\n");
-          let combinedDataArray = [
-            ...new Set([...existingDataArray, ...newDataArray]),
-          ];
-          data = combinedDataArray.join("\n");
-        } else {
-          data = newData;
-        }
-
-        localStorage.setItem("userInput", data); // Stores data in the browser
-        console.log("Data saved in browser storage!");
-
-        fetch("/process", {
-          method: "POST",
-          headers: {
-            "Content-Type": "text/plain",
-          },
-          body: data,
-        })
-          .then((response) => response.json())
-          .then((data) => {
-            console.log("Flask response: ", data);
-            if (data.invalid_fish_names && data.suggestions) {
-              displaySuggestions(data.invalid_fish_names, data.suggestions);
-            }
-          })
-          .catch((error) => {
-            // SyntaxError happens when all entries are valid... or so I hope...
-            if (error instanceof SyntaxError) {
-              console.error("SyntaxError:", error);
-              window.location.href = "/";
-            } else {
-              console.error("Error:", error);
-            }
-          });
-      }
-
-      function displaySuggestions(invalidFish, suggestions) {
-        const invalidFishList = document.getElementById("invalid-fish-list");
-        const suggestionsList = document.getElementById("suggestions-list");
-        const suggestionsContainer = document.getElementById(
-          "suggestions-container"
-        );
-
-        invalidFishList.innerHTML = "";
-        suggestionsList.innerHTML = "";
-
-        invalidFish.forEach((fish) => {
-          const li = document.createElement("li");
-          li.textContent = fish;
-          invalidFishList.appendChild(li);
-        });
-
-        suggestions.forEach((suggestion) => {
-          const li = document.createElement("li");
-          li.textContent = suggestion;
-          suggestionsList.appendChild(li);
-        });
-
-        suggestionsContainer.style.display = "block";
-      }
-
       function clearCache() {
         localStorage.removeItem("userInput");
         console.log("Cache cleared!");
