--- a/templates/index.html
+++ b/templates/index.html
@@ -26,67 +26,36 @@
       <div class="image_container_inner">
         <div class="hemisphere_selection_outer">
           <div class="hemisphere_selection_btns">
-            <!-- https://www.svgrepo.com/svg/310651/circle-half-fill -->
-            <form action="/" method="post" id="form1" style="display: inline">
-              <button
-                type="submit"
-                name="hemisphere"
-                value="NH"
-                class="svg_button_container"
-                id="btn1"
-                onclick="setFormState('form2', 'static/images/SH_spawning_calendar.png')"
+            <form action="/" method="post" id="hemisphereForm"></form>
+            <button
+              type="submit"
+              name="hemisphere"
+              value="NH"
+              class="svg_button_container"
+              id="hemisphereButton"
+              onclick="toggleHemisphere()"
+            >
+              <svg
+                id="hemisphereSvg"
+                viewBox="0 0 16 16"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="#000000"
+                class="bi bi-circle-half"
+                transform="rotate(90)"
               >
-                <svg
-                  viewBox="2 2 24 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                  transform="rotate(0)"
-                >
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g
-                    id="SVGRepo_tracerCarrier"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  ></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path
-                      d="M2.0277 11.25C2.41123 6.07745 6.72944 2 12 2C17.2706 2 21.5888 6.07745 21.9723 11.25H22V12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12V11.25H2.0277ZM12 3.5C7.55831 3.5 3.91233 6.90686 3.53263 11.25H20.4674C20.0877 6.90686 16.4417 3.5 12 3.5Z"
-                      fill="#212121"
-                    ></path>
-                  </g>
-                </svg>
-              </button>
-            </form>
-            <form action="/" method="post" id="form2" style="display: none">
-              <button
-                type="submit"
-                name="hemisphere"
-                value="SH"
-                class="svg_button_container"
-                id="btn2"
-                onclick="setFormState('form1', 'static/images/NH_spawning_calendar.png')"
-              >
-                <svg
-                  viewBox="2 2 24 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                  transform="rotate(180)"
-                >
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g
-                    id="SVGRepo_tracerCarrier"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  ></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path
-                      d="M2.0277 11.25C2.41123 6.07745 6.72944 2 12 2C17.2706 2 21.5888 6.07745 21.9723 11.25H22V12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12V11.25H2.0277ZM12 3.5C7.55831 3.5 3.91233 6.90686 3.53263 11.25H20.4674C20.0877 6.90686 16.4417 3.5 12 3.5Z"
-                      fill="#212121"
-                    ></path>
-                  </g>
-                </svg>
-              </button>
-            </form>
+                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                <g
+                  id="SVGRepo_tracerCarrier"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></g>
+                <g id="SVGRepo_iconCarrier">
+                  <path
+                    d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"
+                  ></path>
+                </g>
+              </svg>
+            </button>
           </div>
           <div class="hemisphere_selection_text">Change Hemispheres</div>
         </div>
@@ -99,24 +68,15 @@
     </div>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
-        var lastForm = localStorage.getItem("lastForm");
-        if (!lastForm) {
-          lastForm = "form2";
+        var lastHemisphere = localStorage.getItem("lastHemisphere");
+        if (!lastHemisphere) {
+          lastHemisphere = "NH";
         }
-        if (lastForm === "form2") {
-          document.getElementById("form1").style.display = "none";
-          document.getElementById("form2").style.display = "inline";
-        } else {
-          document.getElementById("form1").style.display = "inline";
-          document.getElementById("form2").style.display = "none";
-        }
+        setHemisphere(lastHemisphere);
       });
-
-      function setFormState(formToShow, imageSrc) {
-        localStorage.setItem("lastForm", formToShow);
-        localStorage.setItem("imageSrc", imageSrc);
-      }
     </script>
+    <script src="{{ url_for('static', filename='js/setHemisphere.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/toggleHemisphere.js')}}"></script>
     {% endif %}
 
     <div class="fishContainerHeading">
@@ -159,18 +119,6 @@
       </div>
     </div>
 
-    <script>
-      function toggleFishList(containerId, buttonId) {
-        var button = document.getElementById(buttonId);
-        var container = document.getElementById(containerId);
-        if (container.style.display === "none") {
-          container.style.display = "block";
-          button.textContent = "Hide";
-        } else {
-          container.style.display = "none";
-          button.textContent = "Show";
-        }
-      }
-    </script>
+    <script src="{{ url_for('static', filename='js/toggleFishList.js')}}"></script>
   </body>
 </html>
