divided css, added settings menu

--- a/templates/fish-input.html
+++ b/templates/fish-input.html
@@ -7,7 +7,7 @@
 
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/styles.css') }}"
+      href="{{ url_for('static', filename='css/index.css') }}"
     />
 
     <link
@@ -25,7 +25,7 @@
     <div class="flex-wrap display: flex-wrap" style="text-align: center">
       <textarea
         autofocus
-        id="fishData"
+        id="fish-data"
         placeholder="Type here..."
         rows="5"
         cols="50"
