--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,3 +10,4 @@
 @import '/static/css/fonts.css';
 @import '/static/css/settings_menu.css';
 @import '/static/css/footer.css';
+@import '/static/css/colors.css';
