--- a/templates/fish-input.html
+++ b/templates/fish-input.html
@@ -1,61 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ACNH Fish Spawning Calendar</title>
+{% extends "base.html" %}
 
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/index.css') }}"
-    />
+{% block body_attributes %} style="--fish-count: {{uncaught|length }}" {% endblock %}
+{% block first_a_attributes %} class="gear settings-menu" {% endblock %}
 
-    <link
-      rel="shortcut icon"
-      href="{{ url_for('static', filename='favicon.ico') }}"
-    />
-  </head>
-  <body>
-    <div class="topnav">
-      <a href="/">Home</a>
-      <a class="active" href="/fish-input">Input Data</a>
-    </div>
+{% block second_a_attributes %} href="/" {% endblock %}
+{% block second_a_inner %} Home {% endblock %}
 
-    <h1>Enter the fish you have caught (one per line):</h1>
-    <div class="flex-wrap display: flex-wrap" style="text-align: center">
-      <textarea
-        autofocus
-        id="fish-data"
-        placeholder="Type here..."
-        rows="5"
-        cols="50"
-        style="resize: none; display: block; margin: 0 auto"
-      ></textarea>
-      <div
-        style="
-          display: flex;
-          justify-content: center;
-          gap: 10px;
-          margin-top: 10px;
-        "
-      >
-        <button onclick="saveAndSendData();" class="button_container">
-          Send input
-        </button>
-        <button onclick="clearCachedInput();" class="button_container">
-          Clear Cache
-        </button>
-      </div>
-    </div>
-    <div id="suggestions-container" style="display: none">
-      <h2>You entered some invalid fish names</h2>
-      These are the invalid names:
-      <ul id="invalid-fish-list"></ul>
-      Did you mean...
-      <ul id="suggestions-list"></ul>
-    </div>
-    <script src="{{ url_for('static', filename='js/saveAndSendData.js')}}"></script>
-    <script src="{{ url_for('static', filename='js/displaySuggestions.js')}}"></script>
-    <script src="{{ url_for('static', filename='js/clearCachedInput.js')}}"></script>
-  </body>
-</html>
+{% block third_a_attributes %} class="active" href="/fish-input"{% endblock %}
+{% block third_a_inner %} Input Data {% endblock %}
+
+{% block body %}
+<h1>Enter the fish you have caught (one per line):</h1>
+<div class="flex-wrap display: flex-wrap" style="text-align: center">
+  <textarea
+    autofocus
+    id="fish-data"
+    placeholder="Type here..."
+    rows="5"
+    cols="50"
+    style="resize: none; display: block; margin: 0 auto"
+  ></textarea>
+  <div
+    style="display: flex; justify-content: center; gap: 10px; margin-top: 10px"
+  >
+    <button onclick="saveAndSendData();" class="button_container">
+      Send input
+    </button>
+    <button onclick="clearCachedInput();" class="button_container">
+      Clear Cache
+    </button>
+  </div>
+</div>
+<div id="suggestions-container" style="display: none">
+  <h2>You entered some invalid fish names</h2>
+  These are the invalid names:
+  <ul id="invalid-fish-list"></ul>
+  Did you mean...
+  <ul id="suggestions-list"></ul>
+</div>
+<script src="{{ url_for('static', filename='js/saveAndSendData.js')}}"></script>
+<script src="{{ url_for('static', filename='js/displaySuggestions.js')}}"></script>
+{% endblock %}
