--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,13 +1,13 @@
-@import "/static/css/basics.css";
-@import "/static/css/headers.css";
-@import "/static/css/topnav.css";
-@import "/static/css/fishlist.css";
-@import "/static/css/hemisphere.css";
-@import "/static/css/svg.css";
-@import "/static/css/button.css";
-@import "/static/css/image.css";
-@import "/static/css/spinning.css";
-@import "/static/css/fonts.css";
-@import "/static/css/settings_menu.css";
-@import "/static/css/footer.css";
-@import "/static/css/colors.css";
+@import url("/static/css/basics.css");
+@import url("/static/css/headers.css");
+@import url("/static/css/topnav.css");
+@import url("/static/css/fishlist.css");
+@import url("/static/css/hemisphere.css");
+@import url("/static/css/svg.css");
+@import url("/static/css/button.css");
+@import url("/static/css/image.css");
+@import url("/static/css/spinning.css");
+@import url("/static/css/fonts.css");
+@import url("/static/css/settings_menu.css");
+@import url("/static/css/footer.css");
+@import url("/static/css/colors.css");
