Fixed footer and changed button text

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,13 +1,14 @@
+@import url("/static/css/colors.css");
+@import url("/static/css/fonts.css");
 @import url("/static/css/basics.css");
 @import url("/static/css/headers.css");
 @import url("/static/css/topnav.css");
-@import url("/static/css/fishlist.css");
+@import url("/static/css/settings_menu.css");
 @import url("/static/css/hemisphere.css");
 @import url("/static/css/svg.css");
 @import url("/static/css/button.css");
 @import url("/static/css/image.css");
 @import url("/static/css/spinning.css");
-@import url("/static/css/fonts.css");
-@import url("/static/css/settings_menu.css");
+@import url("/static/css/fish-input.css");
+@import url("/static/css/fishlist.css");
 @import url("/static/css/footer.css");
-@import url("/static/css/colors.css");
