--- a/static/css/basics.css
+++ b/static/css/basics.css
@@ -1,12 +1,22 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
 body {
+    display: flex;
+    flex-direction: column;
     font-family: Bokutoh_EB;
     background-color: #f0f1ed;
-    margin: 0 auto;
     background-image: url('/static/images/tileable_bg_large.webp');
     background-repeat: repeat;
     background-size: contain;
     background-position: top left;
-    background-attachment: fixed;
+}
+
+.main-content {
+    flex-grow: 1;
 }
 
 form {
