--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,20 +1,20 @@
 .footer {
     display: flex;
-    left: 0;
-    bottom: 0;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 0%;
     background-color: #333;
     color: white;
     text-align: center;
-    /* padding: 10px 0; */
+    padding: 10px 0;
 }
 
 .footer a {
     color: white;
     text-decoration: none;
-    margin-left: 15px;
+    margin-left: 10px;
     text-align: left;
+    margin-right: auto;
 }
 
 .footer img {
@@ -22,7 +22,6 @@
     display: inline-flex;
     vertical-align: middle;
     padding-left: 0;
-    text-align: left;
 }
 
 .footer_text {
