--- a/templates/fish-input.html
+++ b/templates/fish-input.html
@@ -1,22 +1,18 @@
 {% extends "base.html" %}
 
-{% block body_attributes %} style="--fish-count: {{uncaught|length }}" {% endblock %}
-{% block first_a_attributes %} class="gear settings-menu" {% endblock %}
-
-{% block second_a_attributes %} href="/" {% endblock %}
-{% block second_a_inner %} Home {% endblock %}
-
-{% block third_a_attributes %} class="active" href="/fish-input"{% endblock %}
-{% block third_a_inner %} Input Data {% endblock %}
-
-{% block body %}
+<!-- {% block body_attributes %} style="--fish-count: {{uncaught|length }}" {% endblock %} -->
+{% block first_a_attributes %} class="gear settings-menu" {% endblock %} {%
+block second_a_attributes %} href="/" {% endblock %} {% block second_a_inner %}
+Home {% endblock %} {% block third_a_attributes %} class="active"
+href="/fish-input"{% endblock %} {% block third_a_inner %} Input Data {%
+endblock %} {% block body %}
 <h1>Enter the fish you have caught (one per line):</h1>
-<div class="flex-wrap display: flex-wrap" style="text-align: center">
+<div class="flex-wrap display: flex-wrap">
   <textarea
     autofocus
     id="fish-data"
     placeholder="Type here..."
-    rows="5"
+    rows="10"
     cols="50"
     style="resize: none; display: block; margin: 0 auto"
   ></textarea>
@@ -24,8 +20,9 @@
     style="display: flex; justify-content: center; gap: 10px; margin-top: 10px"
   >
     <button onclick="saveAndSendData();" class="button_container">
-      Send input
+      Save
     </button>
+    <!-- From Uiverse.io by Peary74 -->
     <button onclick="clearCachedInput();" class="button_container">
       Clear Cache
     </button>
