updated fish input to handle typos and suggestions, added ability to ignore suggestions

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
           <li onclick="clearCachedInput()">
             <a href="/">Clear Cached Input</a>
           </li>
-          <li onclick="option3()"><a href="/">Option 3</a></li>
+          <li onclick="exportData()"><a href="/">Export Data</a></li>
         </ul>
       </div>
       <div class="topnav">
@@ -74,6 +74,7 @@
       <script src="{{ url_for('static', filename='js/settingsMenu.js')}}"></script>
       <script src="{{ url_for('static', filename='js/updateSpin.js')}}"></script>
       <script src="{{ url_for('static', filename='js/clearCachedInput.js')}}"></script>
+      <script src="{{ url_for('static', filename='js/exportData.js')}}"></script>
 
       <script>
         document.addEventListener("DOMContentLoaded", function () {
