Added loader and made process route use https

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -12,3 +12,4 @@
 @import url("/static/css/fish-input.css");
 @import url("/static/css/fishlist.css");
 @import url("/static/css/footer.css");
+@import url("/static/css/load-spinner.css");
