--- a/templates/fish-input.html
+++ b/templates/fish-input.html
@@ -29,6 +29,9 @@ endblock %} {% block body %}
   <h2 id="invalid-fish-text">You entered some invalid fish names</h2>
   <ul id="invalid-fish-list"></ul>
 </div>
+<div id="loader" class="loader_spinner_wrapper" style="display: none;">
+  <div class="loader_spinner"></div>
+</div>
 <script src="{{ url_for('static', filename='js/displaySuggestions.js')}}"></script>
 <script src="{{ url_for('static', filename='js/saveAndSendData.js')}}"></script>
 {% endblock %}
